--- a/examples/bbw/Makefile
+++ b/examples/bbw/Makefile
@@ -2,9 +2,7 @@ include ../../build/Makefile.conf
 
 CXX=g++
 
-LIBIGL=../../
-LIBIGL_INC=-I${LIBIGL}/include
-LIBIGL_LIB=-L${LIBIGL}/lib -ligl -liglmosek -liglbbw
+LIBIGL_LIB+=-liglmosek -liglbbw -ligltetgen
 
 ifdef IGL_NO_MOSEK
 CFLAGS+=-DIGL_NO_MOSEK
@@ -16,21 +14,11 @@ endif
 ifndef MOSEKVERSION
   MOSEKVERSION=6
 endif
-IGLMOSEK=../mosek/
-IGLMOSEK_INC=-I$(IGLMOSEK)/
-INC+=${IGLMOSEK_INC}
 MOSEK=/usr/local/mosek
 MOSEK_INC=-I$(MOSEK)/$(MOSEKVERSION)/tools/platform/$(MOSEKPLATFORM)/h
 MOSEK_LIB=-L$(MOSEK)/$(MOSEKVERSION)/tools/platform/$(MOSEKPLATFORM)/bin -lmosek64
 INC+=$(MOSEK_INC)
 endif
-
-EIGEN3_INC=-I$(DEFAULT_PREFIX)/include/eigen3 -I$(DEFAULT_PREFIX)/include/eigen3/unsupported
-
-# By default I'm using the libigl version. Adjust accordingly
-TETGEN=$(LIBIGL)/external/tetgen
-TETGEN_LIB=-L$(TETGEN) -ligltetgen -ltet 
-TETGEN_INC=-I$(TETGEN)
 
 INC=-I. ${EIGEN3_INC} ${LIBIGL_INC} ${TETGEN_INC} ${MOSEK_INC} 
 LIB=${TETGEN_LIB} ${MOSEK_LIB} ${OPENGL_LIB} ${GLUT_LIB} ${LIBIGL_LIB} 
