Forgot this makefile

--- a/examples/basic_topology/Makefile
+++ b/examples/basic_topology/Makefile
@@ -5,10 +5,12 @@ all: example1
 include ../../build/Makefile.conf
 
 igl_lib=../../
-eigen_lib=$(DEFAULT_PREFIX)/include/eigen3/
+ifndef EIGEN3_INC
+	EIGEN3_INC=-I$(DEFAULT_PREFIX)/include/eigen3/
+endif
 
 CFLAGS+=-g -fopenmp
-inc=-I$(igl_lib)/include -I$(eigen_lib)
+inc=-I$(igl_lib)/include $(EIGEN3_INC)
 lib=-L$(igl_lib)/lib -ligl
 
 example1: example1.o
