--- a/tutorial/CMakeLists.txt
+++ b/tutorial/CMakeLists.txt
@@ -79,3 +79,4 @@ add_subdirectory("609_Boolean")
 endif()
 add_subdirectory("701_Statistics")
 add_subdirectory("702_WindingNumber")
+add_subdirectory("703_Decimation")
