--- a/examples/quicklook-mesh/Info.plist
+++ b/examples/quicklook-mesh/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>BuildMachineOSBuild</key>
+	<string>13E28</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleDocumentTypes</key>
@@ -11,49 +13,63 @@
 			<string>QLGenerator</string>
 			<key>LSItemContentTypes</key>
 			<array>
-				<string>org.mesh</string>
-				<string>org.obj</string>
-				<string>org.off</string>
-				<string>org.ply</string>
-				<string>org.stl</string>
-				<string>org.wrl</string>
+				<string>com.mesh.mesh</string>
+				<string>com.mesh.obj</string>
+				<string>com.mesh.off</string>
+				<string>com.mesh.ply</string>
+				<string>com.mesh.stl</string>
+				<string>com.mesh.wrl</string>
 			</array>
 		</dict>
 	</array>
 	<key>CFBundleExecutable</key>
 	<string>Mesh</string>
-	<key>CFBundleIconFile</key>
-	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>org.mesh.quicklook</string>
+	<string>com.mesh.quicklook</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
 	<string>Mesh</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.1</string>
+	<string>1.0.2</string>
 	<key>CFBundleVersion</key>
-	<string>1.2</string>
+	<string>1.0</string>
 	<key>CFPlugInDynamicRegisterFunction</key>
 	<string></string>
 	<key>CFPlugInDynamicRegistration</key>
-	<false/>
+	<string>NO</string>
 	<key>CFPlugInFactories</key>
 	<dict>
-		<key>C00EB589-55DF-45ED-B4B8-8AFFA367CFCF</key>
+		<key>8D269336-626C-4F43-903F-D2F6AE5C4976</key>
 		<string>QuickLookGeneratorPluginFactory</string>
 	</dict>
 	<key>CFPlugInTypes</key>
 	<dict>
 		<key>5E2D9680-5022-40FA-B806-43349622E5B9</key>
 		<array>
-			<string>C00EB589-55DF-45ED-B4B8-8AFFA367CFCF</string>
+			<string>8D269336-626C-4F43-903F-D2F6AE5C4976</string>
 		</array>
 	</dict>
 	<key>CFPlugInUnloadFunction</key>
 	<string></string>
+	<key>DTCompiler</key>
+	<string>com.apple.compilers.llvm.clang.1_0</string>
+	<key>DTPlatformBuild</key>
+	<string>5B1008</string>
+	<key>DTPlatformVersion</key>
+	<string>GM</string>
+	<key>DTSDKBuild</key>
+	<string>13C64</string>
+	<key>DTSDKName</key>
+	<string>macosx10.9</string>
+	<key>DTXcode</key>
+	<string>0511</string>
+	<key>DTXcodeBuild</key>
+	<string>5B1008</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright 2013 Alec Jacobson</string>
+	<string>Copyright © 2015 Alec Jacobson</string>
 	<key>QLNeedsToBeRunInMainThread</key>
 	<true/>
 	<key>QLPreviewHeight</key>
@@ -63,18 +79,19 @@
 	<key>QLSupportsConcurrentRequests</key>
 	<true/>
 	<key>QLThumbnailMinimumSize</key>
-	<integer>32</integer>
-	<key>UTImportedTypeDeclarations</key>
+	<integer>10</integer>
+	<key>UTExportedTypeDeclarations</key>
 	<array>
+
 		<dict>
 			<key>UTTypeConformsTo</key>
 			<array>
-				<string>public.image</string>
+				<string>public.data</string>
 			</array>
 			<key>UTTypeDescription</key>
 			<string>3d tetrahedral mesh</string>
 			<key>UTTypeIdentifier</key>
-			<string>org.mesh</string>
+			<string>com.mesh.mesh</string>
 			<key>UTTypeReferenceURL</key>
 			<string>http://www.ann.jussieu.fr/frey/publications/RT-0253.pdf#page=33</string>
 			<key>UTTypeTagSpecification</key>
@@ -85,16 +102,15 @@
 				</array>
 			</dict>
 		</dict>
-
 		<dict>
 			<key>UTTypeConformsTo</key>
 			<array>
-				<string>public.image</string>
+				<string>public.data</string>
 			</array>
 			<key>UTTypeDescription</key>
 			<string>3D model format</string>
 			<key>UTTypeIdentifier</key>
-			<string>org.obj</string>
+			<string>com.mesh.obj</string>
 			<key>UTTypeReferenceURL</key>
 			<string>http://en.wikipedia.org/wiki/Wavefront_.obj_file#File_format</string>
 			<key>UTTypeTagSpecification</key>
@@ -105,16 +121,15 @@
 				</array>
 			</dict>
 		</dict>
-
 		<dict>
 			<key>UTTypeConformsTo</key>
 			<array>
-				<string>public.image</string>
+				<string>public.data</string>
 			</array>
 			<key>UTTypeDescription</key>
 			<string>PLY 3D file</string>
 			<key>UTTypeIdentifier</key>
-			<string>org.ply</string>
+			<string>com.mesh.ply</string>
 			<key>UTTypeReferenceURL</key>
 			<string>http://en.wikipedia.org/wiki/PLY_%28file_format%29</string>
 			<key>UTTypeTagSpecification</key>
@@ -125,16 +140,15 @@
 				</array>
 			</dict>
 		</dict>
-
 		<dict>
 			<key>UTTypeConformsTo</key>
 			<array>
-				<string>public.image</string>
+				<string>public.data</string>
 			</array>
 			<key>UTTypeDescription</key>
 			<string>Stereolithography CAD model</string>
 			<key>UTTypeIdentifier</key>
-			<string>org.stl</string>
+			<string>com.mesh.stl</string>
 			<key>UTTypeReferenceURL</key>
 			<string>http://en.wikipedia.org/wiki/STL_(file_format)</string>
 			<key>UTTypeTagSpecification</key>
@@ -148,12 +162,12 @@
 		<dict>
 			<key>UTTypeConformsTo</key>
 			<array>
-				<string>public.image</string>
+				<string>public.data</string>
 			</array>
 			<key>UTTypeDescription</key>
 			<string>Geomview's polyhedral file format</string>
 			<key>UTTypeIdentifier</key>
-			<string>org.off</string>
+			<string>com.mesh.off</string>
 			<key>UTTypeReferenceURL</key>
 			<string>http://tetgen.berlios.de/fformats.off.html</string>
 			<key>UTTypeTagSpecification</key>
@@ -167,12 +181,12 @@
 		<dict>
 			<key>UTTypeConformsTo</key>
 			<array>
-				<string>public.image</string>
+				<string>public.data</string>
 			</array>
 			<key>UTTypeDescription</key>
 			<string>Virtual Reality Modeling Language</string>
 			<key>UTTypeIdentifier</key>
-			<string>org.wrl</string>
+			<string>com.mesh.wrl</string>
 			<key>UTTypeReferenceURL</key>
 			<string>http://en.wikipedia.org/wiki/VRML#WRL_File_Format</string>
 			<key>UTTypeTagSpecification</key>
@@ -183,6 +197,8 @@
 				</array>
 			</dict>
 		</dict>
+
 	</array>
 </dict>
 </plist>
+
