signed distances in tutorial

--- a/tutorial/CMakeLists.txt
+++ b/tutorial/CMakeLists.txt
@@ -80,3 +80,4 @@ endif()
 add_subdirectory("701_Statistics")
 add_subdirectory("702_WindingNumber")
 add_subdirectory("703_Decimation")
+add_subdirectory("704_SignedDistance")
