anttweakbar as extra
Former-commit-id: fc8191ce01e8fbc3c4d3d68644a177a880b7d002

--- a/examples/Makefile.conf
+++ b/examples/Makefile.conf
@@ -210,9 +210,7 @@ ifndef EIGEN3_INC
 	EIGEN3_INC=-I$(DEFAULT_PREFIX)/include/eigen3 -I$(DEFAULT_PREFIX)/include/eigen3/unsupported
 endif
 
-ifndef LIBIGL
-	LIBIGL=$(THIS_DIR)/../
-endif
+LIBIGL=$(THIS_DIR)/../
 LIBIGL_INC=-I$(LIBIGL)/include
 
 ifndef ANTTWEAKBAR_INC
@@ -220,7 +218,7 @@ ifndef ANTTWEAKBAR_INC
 endif
 ifndef ANTTWEAKBAR_LIB
 	# AntTweakBar needs AppKit on mac os x
-	ANTTWEAKBAR_LIB=-L$(LIBIGL)/external/AntTweakBar/lib -lAntTweakBar -framework AppKit
+	ANTTWEAKBAR_LIB=-L$(LIBIGL)/external/AntTweakBar/lib -lAntTweakBar -framework AppKit -liglanttweakbar
 endif
 
 ifndef SINGULAR_VALUE_DECOMPOSITION_INC
