removed old unused code, removed predefined key bindings from the viewer
Former-commit-id: 6aaa4090402952309435dcae1002863f5d31647f

--- a/tutorial/CMakeLists.txt
+++ b/tutorial/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 2.6)
 project(libigl_tutorials)
 
+message("Generated with config types: ${CMAKE_CONFIGURATION_TYPES}")
+
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../)
 SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
