fix for new version of nanogui
Former-commit-id: ed5d6c14fbb868fdc3636b43c9bc1a2ddd801d14

--- a/tutorial/CMakeLists.txt
+++ b/tutorial/CMakeLists.txt
@@ -34,7 +34,7 @@ include_directories("../include")
 add_subdirectory("../external/nanogui/" "nanogui")
 include_directories("../external/nanogui/include")
 include_directories("../external/nanogui/ext/nanovg/src")
-list(APPEND SHARED_LIBRARIES "nanogui" "glfw3")
+list(APPEND SHARED_LIBRARIES "nanogui" "glfw")
 
 message(STATUS "Linking with: ${LIBIGL_LIBRARIES}")
 list(APPEND SHARED_LIBRARIES ${LIBIGL_LIBRARIES})
