fix for static lib on linux
Former-commit-id: fcaf056ddd467498d7265969871ac84316cfa586

--- a/tutorial/CMakeLists.txt
+++ b/tutorial/CMakeLists.txt
@@ -32,6 +32,8 @@ include("CMakeLists.shared")
 
 #Compile libigl
 add_definitions(-DIGL_STATIC_LIBRARY)
+add_definitions(-DIGL_NO_OPENGL)
+
 add_subdirectory("../optional" "libigl")
 include_directories("../include")
 
