biharmonic coordinates tutorial example
Former-commit-id: 82b7b2261a2c5fac216ae941618daafd84405502

--- a/tutorial/CMakeLists.txt
+++ b/tutorial/CMakeLists.txt
@@ -86,6 +86,7 @@ add_subdirectory("403_BoundedBiharmonicWeights")
 add_subdirectory("404_DualQuaternionSkinning")
 add_subdirectory("405_AsRigidAsPossible")
 add_subdirectory("406_FastAutomaticSkinningTransformations")
+add_subdirectory("407_BiharmonicCoordinates")
 
 # Chapter 5
 add_subdirectory("501_HarmonicParam")
