--- a/tutorial/CMakeLists.txt
+++ b/tutorial/CMakeLists.txt
@@ -63,6 +63,7 @@ add_subdirectory("102_DrawMesh")
 add_subdirectory("103_Events")
 add_subdirectory("104_Colors")
 add_subdirectory("105_Overlays")
+add_subdirectory("106_ViewerMenu")
 
 # Chapter 2
 add_subdirectory("201_Normals")
