fixes for VS 2015
Former-commit-id: a314525f4ff8952f7107b0fc8c96cb251fe150ed

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -6,6 +6,8 @@ IF(MSVC)
 ### Enable parallel compilation for Visual Studio
   add_definitions(-DEIGEN_DONT_ALIGN)
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
+  SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/../ )
+  SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/../ )
 ENDIF(MSVC)
 
 SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../tutorial/cmake)
