--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ example1
 external/yimg/.git*
 external/tinyxml2/CMakeFiles*
 external/tinyxml2/CMakeCache.txt
+external/embree/build/*
 external/embree/bin/*
 external/embree/bin
 external/embree/doc/html/*
