comiso now links statically if found, build is likely to be broken on windows due to the lack of blas

--- a/optional/CMakeLists.txt
+++ b/optional/CMakeLists.txt
@@ -61,7 +61,7 @@ endif(Boost_FOUND)
 
 
 ## Check for CoMiSo, if not available skip the examples that depends on it
-find_package(LIBCOMISO QUIET)
+find_package(LIBCOMISOH QUIET)
 if (LIBCOMISO_FOUND)
   include_directories( ${LIBCOMISO_INCLUDE_DIRS})
 endif(LIBCOMISO_FOUND)
